# randen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
config/: model_router_config.yaml
craft/: ai_patterns.yaml  humanization.yaml
data/wizard_outputs/: 作品雏形_20260720_211623.md  作品雏形_20260720_212039.md  作品雏形_20260720_212102.md
docs/: README.md  anti-trope-engine.md  character-voice-isolation.md  cross-chapter-causality.md  emotion-arc-visualizer.md  multi-version-comparison.md  reader-retention-predictor.md
docs/proposals/: architecture-extended.md  author-notes-system.md  author-persona.md  chekhov-gun-tracker.md  emotion-arc-visualizer.md  human-first-draft.md  literary-audit.md  reader-community-simulator.md
docs/user-guide/: concepts.md  faq.md  quickstart.md
models/: __init__.py  character.py  context_package.py  foreshadowing.py  outline.py  style.py
skills/dialoguequality/: SKILL.md
skills/foreshadowing-system/: SKILL.md
skills/goethe-agent/: SKILL.md
skills/post-validation/: SKILL.md
skills/style-system/: SKILL.md
skills/text-processing/: SKILL.md
skills/truth-validation/: SKILL.md
skills/workflow-manager/: SKILL.md
skills/world-query/: SKILL.md
src/: outline.md
src/characters/: 云芷.md  墨渊.md  林凡.md  林风.md  苏婉.md
src/world/: 灵感世界观.md
tests/: test_agent_book_state.py  test_agent_director.py  test_agent_orchestrator.py  test_agent_tool_runtime.py  test_chapter_pipeline.py  test_character_sync.py  test_cli_agent.py  test_cli_helpers.py  test_cli_status.py  test_cli_sync.py  test_compressor.py  test_context_builder.py  test_context_schema.py  test_dante_shell.py  test_data_queries.py  test_deep_pipeline.py  test_entry_contracts.py  test_frontmatter.py  test_llm_client.py  test_novel_service.py  test_novel_workspace.py  test_outline_sync.py  test_radar.py  test_react_tool_schema.py  test_readme_svg.py  test_shared_documents.py  test_source_pack.py  test_standard_test_novel_fixture.py  test_studio.py  test_truth_manager.py  test_visualization.py  test_workflow_scheduler.py  test_world_query.py
tools/: __init__.py  ai_assistants.py  ai_traces_sanitizer.py  architect.py  canvas_redrawer.py  chapter_assembler.py  chapter_memory.py  chapter_pipeline.py  character_sync.py  cli.py  context_builder.py  context_schema.py  creation_engine.py  cross_domain_analogy.py  data_queries.py  dialogue_fingerprint.py  dna_extractor.py  file_ops.py  foreshadowing_manager.py  frontmatter.py  goethe.py  init_project.py  init_wizard.py  material_branch_rag.py  material_library.py  multi_agent_negotiator.py  novel_service.py  novel_workspace.py  outline_cache.py  outline_sync.py  post_validator.py  progressive_compressor.py  project_lock.py  radar.py  randen_cli.py  review_store.py  scene_chapter_engine.py  setup_wizard.py  shared_documents.py  short_drama_adaptor.py  (+11 more)
(+88 files in other folders)
