[project]
name = "randen"
version = "1.0.0"
description = "燃灯 (Randen) — 你的长篇小说 AI 写作合伙人。双 Agent 协作：青灯规划，落笔写作。燃灯一盏，故事自成。"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "prompt_toolkit>=3.0",
]

[tool.setuptools.packages.find]
include = ["tools*", "models*"]
exclude = ["tests*", "data*", "craft*", "skills*", "config*", "docs*"]

[tool.setuptools.package-data]
tools = ["studio_assets/*"]

[project.optional-dependencies]
dev = [
    "markdown-it-py>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
randen = "tools.cli:main"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "reference/",
    "__pycache__/",
    "data/",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
