[project]
name = "randen"
version = "1.0.0"
description = "燃灯 — 你的长篇小说 AI 写作合伙人。双 Agent 协作，从灵感到大纲到逐章写作，守护千万字不崩。"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Boos", email = "boos@randen.dev"}]
keywords = ["novel", "writing", "ai", "creative-writing", "long-form", "chinese"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Natural Language :: Chinese (Simplified)",
]

requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
studio = ["flask>=3.0"]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]

[project.scripts]
randen = "tools.cli:main"
qingdeng = "tools.goethe:main"
luobi = "tools.agent.dante:main"

[project.urls]
Homepage = "https://github.com/zengyepeng/randen"
Documentation = "https://github.com/zengyepeng/randen#readme"
Repository = "https://github.com/zengyepeng/randen.git"
Issues = "https://github.com/zengyepeng/randen/issues"

[tool.setuptools.packages.find]
include = ["tools*", "models*"]
exclude = ["tests*", "data*", "craft*", "skills*", "config*", "docs*"]

[tool.setuptools.package-data]
tools = ["studio_assets/*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
